# rust_backend

./: .gitignore  Cargo.deps.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: docker-build-push.yml
.trae/documents/: 修复完成与重构计划.md
db/migrations/: 20251217100000_init_tables.sql  20251217100000_init_wechatapps.sql
src/: admin_routes.rs  after_startup.rs  auth.rs  main.rs  public_routes.rs  routers.rs  routes.rs  state.rs  utils.rs
src/admin/: admin_app.rs  mod.rs
src/admin/dota/: dota_app.rs  mod.rs
src/admin/middleware/: authorize_middleware.rs  mod.rs
src/controller/: app.rs  blog.rs  clipboard.rs  comment.rs  config.rs  coze.rs  email.rs  mod.rs  state.rs  wechat.rs
src/dao/: app.rs  blog.rs  clipboard.rs  comment.rs  database.rs  mod.rs
src/dota/: handler.rs
src/public/: mod.rs  public_app.rs
src/routes/: admin.rs  public.rs
src/util/: email.rs  mod.rs  uuid.rs
swagger/: index.html  openapi.yml  swagger-initializer.js
