[package]
name = "rust_backend"
version = "0.1.2"
edition = "2024"
authors = ["王郁 <wangyu@wycode.cn>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.9"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = { version = "0.10", features = ["smtp-transport", "builder"] }
lettre_email = "0.9"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = "0.4"
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
] }
regex = "1"
lazy_static = "1"
rand = "0.8"
jsonwebtoken = "9.0.2"
