[package]
name = "rust_backend"
version = "0.1.24"
edition = "2024"
authors = ["王郁 <wangyu@wycode.cn>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "catch-panic"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = { version = "0.10", default-features = false, features = [
    "smtp-transport",
    "builder",
    "tokio1",
    "tokio1-native-tls",
    "native-tls",
] }
lettre_email = "0.9"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = "0.4"
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
] }
regex = "1"
lazy_static = "1"
rand = "0.8"
jsonwebtoken = "9.0.2"
sha2 = "0.10"
